# OpeningHoursFixer

./: CMakeLists.txt  README.md  create_changes.py  filter_changes.py  get_from_overpass.py  prepare.sh  process_opening_hours.py  upload_changes.sh
src/: CMakeLists.txt  editdata.cpp  editdata.h  entrywidget.cpp  entrywidget.h  main.cpp  mainwidget.cpp  mainwidget.h
